--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Eduv</title>
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/style.scss">
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
 </head>
 <body>
     <div>
