--- a/index.html
+++ b/index.html
@@ -143,14 +143,17 @@
                     <img src="./images/eduv.png" alt="logo" class="footer-logo">
                     <h1 class="footer-t">EduV</h1>
                 </div>
-                <div class="socials">
-                    <a href="https://www.instagram.com/eduv.uz">
-                        <img src="./images/instagram.png" alt="inst" class="social">
-                    </a>
-                    <a href="https://t.me/eduvvuz">
-                        <img src="./images/telegram.png" alt="tg" class="social">
-                    </a>
-                </div>
+                <section class="s-t">
+                    <h1 class="socials-title">Subscribe to our s.m networks :)</h1>
+                    <div class="socials">
+                        <a href="https://www.instagram.com/eduv.uz">
+                            <img src="./images/instagram.png" alt="inst" class="social">
+                        </a>
+                        <a href="https://t.me/eduvvuz">
+                            <img src="./images/telegram.png" alt="tg" class="social">
+                        </a>
+                    </div>
+                </section>
             </section>
             <hr>
             <section class="bottom">
