--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
                 </div>
                 <ul class="header__nav-list">
                     <li><a href="./index.html" class="header__nav-link">Home</a></li>
-                    <li><a href="#three" class="header__nav-link">About Us</a></li>
-                    <!-- <li><a href="#" class="header__nav-link">Courses</a></li> -->
-                    <li><a href="#" class="header__nav-link">Contact Us</a></li>
+                    <li><a href="./html/aboutus.html" class="header__nav-link">About Us</a></li>
+                    <li><a href="./html/contact.html" class="header__nav-link">Contact Us</a></li>
                 </ul>
             </nav>
             <div class="header-block">
