--- a/html/contact.html
+++ b/html/contact.html
@@ -26,6 +26,51 @@
             </nav>
         </div>
     </header>
-    
+    <main>
+        <div class="container main-content">
+            <section class="girl">
+                <img src="../images/girl.png" alt="girl" class="contact2">
+            </section>
+            <section class="contact">
+                <div class="fourth__bottom">
+                    <h1 class="bottom__titles">Name</h1>
+                    <input type="text" class="bottom__inputs" placeholder="Name">
+                    <h1 class="bottom__titles">Email</h1>
+                    <input type="text" class="bottom__inputs" placeholder="Email">
+                    <h1 class="bottom__titles">Message</h1>
+                    <textarea type="text" class="bottom__input" placeholder="Message"></textarea>
+                    <button class="btn__two">Send Message</button>
+                </div> 
+            </section>
+            <!-- <section class="men">
+                <img src="../images/contact1.png" alt="men" class="contact1">
+            </section> -->
+        </div>
+    </main>
+    <footer>
+        <div class="container footer-content">
+            <section class="top">
+                <div class="logo-bl">
+                    <img src="../images/eduv.png" alt="logo" class="footer-logo">
+                    <h1 class="footer-t">EduV</h1>
+                </div>
+                <section class="s-t">
+                    <h1 class="socials-title">Subscribe to our s.m networks :)</h1>
+                    <div class="socials">
+                        <a href="https://www.instagram.com/eduv.uz">
+                            <img src="../images/instagram.png" alt="inst" class="social">
+                        </a>
+                        <a href="https://t.me/eduvvuz">
+                            <img src="../images/telegram.png" alt="tg" class="social">
+                        </a>
+                    </div>
+                </section>
+            </section>
+            <hr>
+            <section class="bottom">
+                <h3>© 2024 made by Abdukhakim Rakhimboev.</h3>
+            </section>
+        </div>
+    </footer>
 </body>
 </html>
