--- a/html/contact.html
+++ b/html/contact.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EduV / Contact Us</title>
     <link rel="stylesheet" href="../style/contact.css">
-    <link rel="stylesheet" href="../style/contact.scss">
+    <link rel="stylesheet" href="../scss/contact.scss">
+    <link rel="stylesheet" href="../style/global.css">
+    <link rel="stylesheet" href="../scss/global.scss">
     
     <link rel="apple-touch-icon" sizes="180x180" href="../images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
@@ -21,7 +23,7 @@
                 <ul class="header__nav-list">
                     <li><a href="../index.html" class="header__nav-link">Home</a></li>
                     <li><a href="../html/aboutus.html" class="header__nav-link">About Us</a></li>
-                    <li><a href="../html/contact.html" class="header__nav-link">Contact Us</a></li>
+                    <li><a href="../html/contact.html" class="header__nav-link active">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
