--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EduV</title>
     <link rel="stylesheet" href="./style/style.css">
-    <link rel="stylesheet" href="./style/style.scss">
+    <link rel="stylesheet" href="./scss/style.scss">
+    <link rel="stylesheet" href="./style/global.css">
+    <link rel="stylesheet" href="./scss/global.scss">
     
     <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
@@ -19,9 +21,9 @@
                     <img src="./images/eduv.png" alt="Eduv" class="eduv">
                 </div>
                 <ul class="header__nav-list">
-                    <li><a href="./index.html" class="header__nav-link">Home</a></li>
-                    <li><a href="./html/aboutus.html" class="header__nav-link">About Us</a></li>
-                    <li><a href="./html/contact.html" class="header__nav-link">Contact Us</a></li>
+                    <li><a href="./index.html" class="header__nav-link active" data-button= "content-1">Home</a></li>
+                    <li><a href="./html/aboutus.html" class="header__nav-link" data-button= "content-2">About Us</a></li>
+                    <li><a href="./html/contact.html" class="header__nav-link" data-button= "content-3">Contact Us</a></li>
                 </ul>
             </nav>
             <div class="header-block">
