--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -25,6 +25,11 @@
                     <li><a href="../html/aboutus.html" class="header__nav-link active">About Us</a></li>
                     <li><a href="../html/contact.html" class="header__nav-link">Contact Us</a></li>
                 </ul>
+                <div class="burger">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
             </nav>
             <h1 class="faunders">Founders:</h1>
             <div class="landing">
@@ -74,5 +79,8 @@
             </section>
         </div>
     </footer>
+    
+    
+    <script src="../main.js"></script>
 </body>
 </html>
