--- a/html/contact.html
+++ b/html/contact.html
@@ -25,6 +25,11 @@
                     <li><a href="../html/aboutus.html" class="header__nav-link">About Us</a></li>
                     <li><a href="../html/contact.html" class="header__nav-link active">Contact Us</a></li>
                 </ul>
+                <div class="burger">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
             </nav>
         </div>
     </header>
